# lenslet

./: .gitignore  .repomixignore  AGENTS.md  CLAUDE.md  DEVELOPMENT.md  QUICKSTART_API.md  README.md  lenscat_backend_boilerplate_fast_api_python_no_bloat.md  lenscat_lite_frontend_boilerplate_minimal_no_bloat.md  pi-interview-tool.skill  plan-interview.skill  progress.txt  pyproject.toml  ralph-plan-prompt.md  ralph-plan.sh  test_api_simple.py
constraints/: runtime-py313.txt
dev_notes/: 20251029_FRONTEND_DEV_GUIDE_V2.md  Developer_note.md  FIX_v0_frontend.md  PRD_v0.md
docs/: 20251230_smart_folder_frontend_enhance.md  20260114_collaboration-sync-review.md  20260123_collaboration_sync_api.md  20260123_collaboration_sync_plan.md  20260124_collaboration_sync_ops.md  20260124_sync_indicator_toolbar_plan.md  20260126_compare_tool.md  20260128_embedding_similarity_lookup_plan.md  20260130_embedding_similarity_phase2_plan.md  20260206_hotpath_performance_execution_plan.md  20260206_hotpath_performance_execution_plan_review.txt  20260206_multiplayer_presence_reliability_plan.md  20260207_touch_readiness_impl_plan.md  20260207_touch_readiness_s1_smoke.md  20260211_foundational_long_file_refactor_plan.md  20260211_foundational_long_file_refactor_plan_review.txt  20260211_post_s4_high_impact_simplification_scan.md  20260212_issue_tweak_tracking.md  20260213_browse_responsiveness_execution_plan.md  20260213_browse_responsiveness_reimpl_plan.md  20260213_pagespeed_insights_mobile.md  20260213_scope_debloat_execution_plan.md  20260214_dit03_perf_probe.json  20260214_medium_tier_simplification_plan.md  20260214_share_preindex_execution_plan.md  20260219_safe_fallback_removal_plan.md  20260227_SPEC_ranking_tool.md  20260227_multi_library_hub_mvp_design.md  20260228_ranking_mode_execution_plan.md  20260228_ranking_mode_interaction_layout_iteration_plan.md  20260302_workspace_theme_favicon_execution_plan.md  20260303_improvement_plans.md  20260303_inspector_metadata_improvements_execution_plan.md  20260304_ui_jitter_implementation_plan.md  20260304_upload_trash_behavior_audit.md  20260304_upload_trash_implementation_plan.md  20260307_performance_simplification_execution_plan.md  20260307_performance_simplification_review.md  20260308_parquet_browse_metrics_execution_plan.md  20260314_desloppify_quality_execution_plan.md  (+43 more)
docs/20260610_ux_ease_scan/: 20260610_lenslet_ux_improvement_plan.md  20260610_lenslet_ux_improvement_plan_review.md  phase1_contracts.md  (+1 more)
examples/: notebook_example.ipynb  programmatic_api_example.py  test_notebook.ipynb
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  update_header_css.py  vite.config.ts
interview-sheet/: README.md  interview_sheet.py  sample.questions.answers.json  sample.questions.yaml  template.html
lenscat-backend/: .gitignore  Makefile  README.md  SETUP.md  env.example  pyproject.toml  repomix-output.md  requirements.txt  sync_datagen_data.sh
lenscat-backend/data/architecture/: bridge.jpg.json  building1.jpg.json
lenscat-backend/data/events/2024/conference/: keynote.jpg.json  panel.jpg.json
lenscat-backend/data/landscapes/: lake.jpg.json  mountain.jpg.json  sunset.jpg.json
lenscat-backend/data/portraits/: person1.jpg.json  person2.jpg.json
lenscat-backend/scripts/: create_sample_data.py  dev.py
lenscat-backend/src/: __init__.py  main.py
lenscat-backend/src/api/: folders.py  items.py
lenscat-backend/src/lenscat_backend/: __init__.py  config.py  main.py  models.py
lenscat-backend/src/lenscat_backend/api/: __init__.py  dependencies.py  health.py  items.py  search.py  thumbnails.py
lenscat-backend/src/lenscat_backend/routes/: files.py  folders.py  items.py  search.py  thumbs.py
lenscat-backend/src/lenscat_backend/storage/: __init__.py  base.py  local.py  s3.py
lenscat-backend/src/lenscat_backend/utils/: exif.py  hashing.py  jsonio.py  thumbnails.py  thumbs.py
lenscat-backend/src/lenscat_backend/workers/: indexer.py  run_worker.py  thumbnailer.py
lenscat-backend/src/models/: __init__.py  types.py
lenscat-backend/src/utils/: __init__.py  exif.py  thumbnails.py
lenscat-backend/src/workers/: __init__.py  indexer.py
lenscat-lite/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
notebooks/: extract_labelling.ipynb  test_nb.ipynb  test_s3.py
requirements/: runtime-constraints-py313.txt
scripts/: check_frontend_packaging_sync.py  embed_parquet_embeddings.py  gui_jitter_probe.py  gui_smoke_acceptance.py  lint_repo.py  overall_cleanup_browser.py  playwright_large_tree_smoke.py  playwright_large_tree_smoke_baselines.json  playwright_ranking_smoke.py  responsive_geometry_harness.py  setup_dev.py  smoke_harness.py  viewer_flicker_back_browser.py
tests/: test_api_contract.py  test_atomic_write.py  test_browse_cache.py  test_browse_canary_ranking_isolation.py  test_collaboration_sync.py  test_compare_export_endpoint.py  test_dataset_http.py  test_embeddings_search.py  test_factory_error_contract.py  test_folder_pagination.py  test_folder_recursive.py  test_frontend_packaging_sync.py  test_frontend_shell_cache.py  test_hotpath_sprint_s2.py  test_hotpath_sprint_s3.py  test_hotpath_sprint_s4.py  test_import_contract.py  test_indexing_health_contract.py  test_indexing_status_contract.py  test_media_error_contract.py  test_memory_index_performance.py  test_metadata_endpoint.py  test_og_cache.py  test_og_route_contract.py  test_parquet_ingestion.py  test_playwright_large_tree_smoke.py  test_playwright_ranking_smoke.py  test_preindex_fastpath.py  test_presence_lifecycle.py  test_processes.py  test_programmatic_api.py  test_ranking_backend.py  test_ranking_cli.py  test_refresh.py  test_remote_worker_scaling.py  test_search_source_contract.py  test_search_text_contract.py  test_share_security.py  test_storage_contracts.py  test_table_index_pipeline.py  (+9 more)
tmp/lenscat_backend/: pyproject.toml
(+1463 files in other folders)
