[project]
name = "lenscat-backend"
version = "0.1.0"
description = "Lenscat flat-file backend (FastAPI)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "yada", email = "trojblue@gmail.com" }]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "orjson>=3.10",
  "aioboto3>=13.0",
  "boto3>=1.34",
  "python-dotenv>=1.0",
  "blake3>=0.4",
  "pillow>=10.4",
]

[tool.uvicorn]
host = "127.0.0.1"
port = 7070
reload = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
