[project]
name = "lenscat-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "yada", email = "trojblue@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
lenscat-backend = "lenscat_backend:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
